# pep_771-Default-Extras

./: .gitignore  .gitmodules  README.md  assert_installed_packages.py  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: hourly_repo_update.yml  main.yml
demoA/: pyproject.toml
demoB/: Makefile  pyproject.toml  setup.py
pep_771/: Makefile  pyproject.toml
