[build-system]
requires = [
    "setuptools @ git+https://github.com/wheelnext/setuptools.git@pep_771",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*"]

[project]
name = "pep-771-demo-a"
version = "1.0.0"
authors = [
    { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" },
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
]
default-optional-dependencies = ["flask"]

[project.optional-dependencies]
fastapi = ["fastapi"]
flask = ["flask"]
minimal = []
