[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pep-771"
version = "1.0.0"
authors = [
  { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" },
  { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
]
dependencies = [
  "setuptools @ git+https://github.com/wheelnext/setuptools.git@pep_771",
  "pip @ git+https://github.com/wheelnext/pip.git@pep_771",
]
